--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </table>
   <hr>
   <a href="https://www.postimees.ee">Postimees</a>
-  <a href="teine leht.html">Pole postimees</a>
+  <a href="Roblox_vinge_uudis.html">Pole postimees</a>
   <h2>Lemmikud filmid</h2>
   <ol start=1>
     <li>In bruges </li>
