--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>Jonatan</h1>
+  <h1>Jonatan J</h1>
   <p>See on sisu tekst. <strong>Selle osa saab boldiks teha</strong>.</p>
   <p><em>Järgmine rida</em></p>
   <hr>
